mobile view alignment fixes

--- a/src/app/home/reusable/home-card/home-card.component.scss
+++ b/src/app/home/reusable/home-card/home-card.component.scss
@@ -63,7 +63,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        margin-left: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
     
     .fourth-section-card-child-title {
